Added README, added reload functionality, fixed reload bug

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             <p>Select a visualization:</p>
             <button onclick="loadVisualization('boids')">Swarm (Boids)</button>
             <button onclick="loadVisualization('tree')">Spatial Tree</button>
+            <p style="font-size: smaller;">Restart a visualization with "Space". Go back to home with "Backspace".</p>
         </div>
         <div id="visualization-container" style="display: none;">
             <div id="canvas-container"></div>
         </div>
+        
     </body>
 </html>
