Impl. fractualTree, fixed resizing issues.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <div id="home">
             <h1>Welcome to the Visualizer</h1>
             <p>Select a visualization:</p>
-            <button onclick="loadVisualization('boids')">Swarm (Boids)</button>
-            <button onclick="loadVisualization('tree')">Spatial Tree</button>
+            <button onclick="loadVisualization('fractualTree')">Fractual Tree</button>
             <p style="font-size: smaller;">Restart a visualization with "Space". Go back to home with "Backspace".</p>
         </div>
         <div id="visualization-container" style="display: none;">
