--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1>Welcome to the Visualizer</h1>
             <p>Select a visualization:</p>
             <button onclick="loadVisualization('fractualTree')">Fractual Tree</button>
+            <button onclick="loadVisualization('dragonCurve')">Dragon Curve</button>
             <p style="font-size: smaller;">Restart a visualization with "Space". Go back to home with "Backspace".</p>
         </div>
         <div id="visualization-container" style="display: none;">
