implemented butterfly effect

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p>Select a visualization:</p>
             <button onclick="loadVisualization('fractualTree')">Fractual Tree</button>
             <button onclick="loadVisualization('dragonCurve')">Dragon Curve</button>
+            <button onclick="loadVisualization('butterflyEffect')">Butterfly Effect</button>
             <p style="font-size: smaller;">Restart a visualization with "Space". Go back to home with "Backspace".</p>
         </div>
         <div id="visualization-container" style="display: none;">
