--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button onclick="loadVisualization('fractualTree')">Fractual Tree</button>
             <button onclick="loadVisualization('dragonCurve')">Dragon Curve</button>
             <button onclick="loadVisualization('butterflyEffect')">Butterfly Effect</button>
+            <button onclick="loadVisualization('starfield')">Starfield</button>
             <p style="font-size: smaller;">Restart a visualization with "Space". Go back to home with "Backspace".</p>
         </div>
         <div id="visualization-container" style="display: none;">
