--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <button onclick="loadVisualization('dragonCurve')">Dragon Curve</button>
             <button onclick="loadVisualization('butterflyEffect')">Butterfly Effect</button>
             <button onclick="loadVisualization('starfield')">Starfield</button>
+            <button onclick="loadVisualization('mazeGenerator')">Maze Generator</button>
             <p style="font-size: smaller;">Restart a visualization with "Space". Go back to home with "Backspace".</p>
         </div>
         <div id="visualization-container" style="display: none;">
